<com.desarrollodroide.libraryfragmenttransactionextended.SlidingRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.oxilo.shopsity.fragement.Pay">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >
    </android.support.v7.widget.Toolbar>
    <include
        android:layout_below="@+id/toolbar"
        android:id="@+id/line1"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        layout="@layout/line_progress_five" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:layout_below="@+id/line1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:text="@string/choose_option"
            android:gravity="center"
            android:textColor="@color/mdtp_light_gray"/>

        <TextView
            android:id="@+id/action_free_trial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/rounded_map_search"
            android:layout_gravity="center"
            android:text="@string/free_trial"
            android:textAllCaps="true"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:textColor="@android:color/black"
            />


        <TextView
            android:id="@+id/action_plan_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/rounded_map_search"
            android:layout_gravity="center"
            android:text="@string/plan_a"
            android:layout_marginTop="15dp"
            android:textAllCaps="true"
            android:gravity="center"
            android:textColor="@android:color/black"
            />


        <TextView
            android:id="@+id/action_plan_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/rounded_map_search"
            android:layout_gravity="center"
            android:text="@string/plan_b"
            android:textAllCaps="true"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:textColor="@android:color/black"
            />

        <TextView
            android:id="@+id/action_plan_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/rounded_map_search"
            android:layout_gravity="center"
            android:text="@string/plan_c"
            android:layout_marginTop="15dp"
            android:textAllCaps="true"
            android:gravity="center"
            android:textColor="@android:color/black"
            />


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/check_out_btn"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/checkout"
            android:textColor="@android:color/white"
            android:textStyle="bold" />


    </LinearLayout>

</com.desarrollodroide.libraryfragmenttransactionextended.SlidingRelativeLayout>
