<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-bold"
            android:textColor="@color/white"
            android:text="Welcome"
            android:textAppearance="@style/Toolbar.TitleText"
            android:textStyle="bold"
            android:id="@+id/toolbar_title" />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/l1"
        android:padding="16dp"
        android:layout_marginTop="0dp"
        android:layout_below="@+id/toolbar"
        style="@style/welLinear"
        android:orientation="vertical">

        <com.oxilo.shopsity.ui.CustomTextView
            style="@style/msgtextbold"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:text="@string/wellcome"/>

        <com.oxilo.shopsity.ui.CustomTextView
            style="@style/msgtextlight"
            android:text="@string/wellcome1"
            android:layout_gravity="center"
            android:textStyle="normal"
            android:textColor="@color/mdtp_light_gray"
            android:textSize="11sp"/>

        <com.oxilo.shopsity.ui.CustomTextView
            style="@style/msgtextbold"
            android:text="@string/wellcome2"
            android:textColor="@color/mdtp_light_gray"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="normal"
            android:textSize="12sp"
            android:layout_marginTop="20dp"/>

        <com.oxilo.shopsity.ui.CustomTextView
            style="@style/msgtextbold"
            android:text="@string/wellcome3"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:textColor="@color/mdtp_light_gray"
            android:textStyle="bold"
            android:textSize="12dp"/>

        <com.oxilo.shopsity.ui.CustomTextView
            style="@style/msgtextbold"
            android:text="@string/wellcome4"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/mdtp_light_gray"
            android:textStyle="bold"
            android:textSize="12dp"/>

        <LinearLayout
            android:id="@+id/l5"
            style="@style/welLinear"
            android:layout_marginTop="20dp">
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_next"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/l6"
            style="@style/welLinear">
            <com.oxilo.shopsity.ui.CustomTextView
                android:id="@+id/learn"
                style="@style/msgtextlight"
                android:textColor="@android:color/darker_gray"
                android:layout_gravity="center"
                android:text="Learn More"/>
        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="30dp"
            android:id="@+id/l7"
            android:orientation="vertical">

            <com.oxilo.shopsity.ui.CustomTextView
                android:id="@+id/welcome_contact_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10dp"
                android:text=" contact@mobikyte.com"
                android:textColorLink="@color/mdtp_light_gray"
                android:autoLink="email"
                android:layout_alignParentLeft="true"/>
            <com.oxilo.shopsity.ui.CustomTextView
                android:id="@+id/welcome_contact_link2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10dp"
                android:text="www.mobikyte.com"
                android:textColorLink="@color/mdtp_light_gray"
                android:autoLink="email"
                android:layout_alignParentRight="true"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>

