<?xml version="1.0" encoding="utf-8"?>
<com.desarrollodroide.libraryfragmenttransactionextended.SlidingRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.oxilo.shopsity.fragement.Preview">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />


    <include
        android:id="@+id/line1"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/toolbar"
        layout="@layout/line_progress_four" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/line1">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_map_search">

        <ImageView
            android:id="@+id/mobikyte_logo"
            android:layout_width="@dimen/mobikyte_image_size"
            android:layout_height="@dimen/mobikyte_image_size"
            android:src="@drawable/logo"
            android:layout_centerVertical="true"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/mobikyte_logo"
            android:layout_alignBottom="@+id/mobikyte_logo"
            android:layout_toRightOf="@+id/mobikyte_logo">

            <TextView
                android:id="@+id/campaign_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/campaign_title"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="2dp"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/campaign_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/campaign_message"
                android:layout_marginTop="2dp"
                android:layout_alignLeft="@+id/campaign_title"
                android:layout_below="@+id/campaign_title"
                android:textColor="@android:color/darker_gray"/>

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_id1"
                android:textAllCaps="true"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/action_campaign_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="gfrf"
                android:layout_marginTop="2dp"
                android:textColor="@android:color/black"
                android:layout_gravity="left"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:padding="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_id"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/action_order_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="gone"
            android:layout_alignParentRight="true"
            android:padding="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Ad_Budget"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/action_adview_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:gravity="center"/>

        </LinearLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_date"
                android:textAllCaps="true"
                android:layout_gravity="left"
                android:textStyle="bold"
                android:textSize="12sp"
                android:textColor="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/action_start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="sdfd"
                android:textColor="@android:color/black"
                android:layout_marginTop="2dp"
                android:gravity="center|left"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_gravity="right"
                android:textSize="12sp"
                android:textColor="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/action_compilance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="COMPLIANCE"
                android:textColor="@android:color/black"
                android:layout_marginTop="2dp"
                android:gravity="center|right"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="gone"
            android:layout_alignParentRight="true"
            android:padding="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inr"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_marginRight="5dp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/action_inr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:gravity="center"/>

        </LinearLayout>


    </RelativeLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_gravity="left"
            android:textSize="12sp"
            android:textColor="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/action_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="fdff"
            android:textColor="@android:color/black"
            android:layout_marginTop="2dp"
            android:layout_gravity="left"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_action"
            android:layout_gravity="left"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/action_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@android:color/black"
            android:layout_marginTop="2dp"
            android:layout_gravity="left"/>

    </LinearLayout>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/email_sign_in_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/action_next"
        android:textColor="@android:color/white"
        android:textStyle="bold" />
    </LinearLayout>

</com.desarrollodroide.libraryfragmenttransactionextended.SlidingRelativeLayout>